Changelog
=========

4.22-dev - (unreleased)
-----------------------
* Bug fix: added override for datecomponents from plone.app.form
  [tiberich #5236]
* Upgrade step:
    - Within ZMI > portal_setup > Upgrades Tab run upgrades for
      Products.CMFPlone (4.1.2 -> 4.1.5) 
      [voineali #5116]
    - Within ZMI > portal_setup > Import Tab > Import All Steps from
      'Plone Discussions'
    - Migrate comments: http://localhost:<port>/www/@@comment-migration
    - Enable comments and notification mails on
      http://localhost:8080/www/@@discussion-settings
    - Within ZMI > portal_setup > Import Tab import 'Manage the configuration
      registry' from 'EEA Plone Admin: caching settings' 
      [voineali #5121]
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Feature: Upgraded commenting system
  [szabozo0 #5189]
* Change: Add 'eea.content.staleResources' cache rule in order to cache some sparql
  resources in varnish for one month
  [voineali, demarant fixes #5121]
* Bug fix: Make it possible to add new Plone Sites within EEA Data.fs or on a
  fresh new one
  [voineali refs #5145]
* Change: removed jsdisable condition from js resources
  [szabozo0 #5095]

4.21 - (2012-04-26)
-------------------
* Bug fix: now all objects that are copied have their creation
  date set to now()
  [tiberich #4402]
* Feature: use fake_transition in eea_data_workflow
  [tiberich #5065]
* Bug fix: Added plone.app.caching rules for DavizVisualization,
  Sparql and SparqlBookmarkFolder
  [voineali #5074]
* Upgrade step: Remove 'sparql-download' from:
  Site Setup > Caching > Caching operations > Templates
  [voineali #5074]

4.20 - (2012-03-30)
-------------------
* Bug fix: patched plone.app.discussion ver 2.0.10, not to fail on migrate workflows
  when "Discussion Item" has no workflow assigned
  [ghicaale #5041]
* Bug fix: fixed "content rules" redirects under control panel
  [ghicaale]